blog/infera/k8s/comments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-node-service
spec:
  type: NodePort
  selector:
    app: comments
  ports:
    - name: comments
      port: 3001
      targetPort: 3001
      protocol: TCP
