blog/infera/k8s/event-bus-deplo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-depo
spec:
  replica: 1
  selector:
    matchLabels:
      app: events
  template:
    metadata:
      labels:
        app: events
    spec:
      containers:
        - name: events
          image: dawit687/event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event
  ports:
    - name: event
      port: 3004
      targetPort: 3004
      protocol: TCP
