blog/infera/k8s/event-bus-devel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      containers:
        - name: event
          image: dawit687/events
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
spec:
  selector:
    app: event
  ports:
    - name: event
      protocol: TCP
      port: 3005
      targetPort: 3005
