blog/infera/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/useregex: "true"
  #   kubernates.io/ingress.class: nginx   older version v1beta1
spec:
  ingressClassName: nginx
  rules:
    - host: posts.com # we  teak  for dev as 127.0.0.1 in etc/hosts
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 3000
          - path: /posts
            pathType: Prfix
            backend:
              service:
                name: query-cluster-service
                port:
                  number: 3004
          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: comment-cluster-service
                port:
                  number: 3001
          - path: /post/?(.*)/comments
            pathType: ImplementationSpecific
            backend:
              service:
                name: comment-cluster-service
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
              name: client-cluster-service
              port:
                number: 5173
